--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style.css" />
+		<script src="%sveltekit.assets%/global.js" type="module"></script>
+		<title>Ashi Kamra's Portfolio</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
